[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-linkedin-zero"
version = "0.2.0"
description = "Token-optimized, public-first LinkedIn jobs MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Santhakumar K" }]
dependencies = [
  "beautifulsoup4>=4.12",
  "curl-cffi>=0.15.0",
  "fastmcp>=2.0",
  "httpx>=0.28",
  "lxml>=5.3",
  "platformdirs>=4.3",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "python-docx>=1.1",
  "rich>=13.9",
  "selectolax>=0.4.10",
  "structlog>=24.4",
  "tenacity>=9.1.4",
  "authlib>=1.3.0",
  "itsdangerous>=2.1.2",
]

[project.optional-dependencies]
ai = ["sentence-transformers>=5.6.0"]
docling = ["docling>=2.110.0"]
vectors = ["qdrant-client>=1.12.1"]
observability = ["opentelemetry-sdk>=1.42.1"]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "pytest-cov>=4.1",
  "mypy>=1.10",
  "hypothesis>=6.100",
  "bandit>=1.7.8",
]
multi = ["python-jobspy>=1.1.82"]
pdf = ["pymupdf>=1.25"]
browser = ["playwright>=1.49", "patchright>=1.49"]

[project.scripts]
linkedin-mcp-zero = "linkedin_mcp_zero.main:cli"
mcp-server-linkedin-zero = "linkedin_mcp_zero.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin_mcp_zero"]

[tool.hatch.build.targets.wheel.shared-data]
"src/linkedin_mcp_zero/py.typed" = "linkedin_mcp_zero/py.typed"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_decorators = false
ignore_missing_imports = true

